force-app/main/default/objects/BMCServiceDesk__FAQ_Feedback__c/BMCServiceDesk__FAQ_Feedback__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the feedback received for FAQs.</description>
    <label>FAQ Feedback</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>