force-app/main/default/objects/BMCServiceDesk__FAQ_Feedback__c/fields/BMCServiceDesk__Comment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Comment__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>