force-app/main/default/objects/BMCServiceDesk__FAQ_Feedback__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FAQ_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>