force-app/main/default/objects/BMCServiceDesk__FAQ_Feedback__c/fields/BMCServiceDesk__Rating__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Rating__c</fullName>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>