force-app/main/default/objects/BMCServiceDesk__FAQ_Feedback__c/fields/BMCServiceDesk__Submitted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Submitted__c</fullName>
    <label>Submitted</label>
    <type>DateTime</type>
</CustomField>